--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+Iceberg\.mba05832
+
+Iceberg\.mba15212
+
+Iceberg\.mba19852
+
+Iceberg\.mbb19852
+
+Iceberg\.mbc19852
+
+Iceberg\.mbd19852
